--- a/XiAnOuDeERP/XiAnOuDeERP.csproj
+++ b/XiAnOuDeERP/XiAnOuDeERP.csproj
@@ -485,6 +485,10 @@
     <Compile Include="Migrations\202007130500109_Purchase-Add_Z_Row_Null.Designer.cs">
       <DependentUpon>202007130500109_Purchase-Add_Z_Row_Null.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007130613332_Add_Number.cs" />
+    <Compile Include="Migrations\202007130613332_Add_Number.Designer.cs">
+      <DependentUpon>202007130613332_Add_Number.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Db\Aggregate\ApprovalMangement\Approval.cs" />
     <Compile Include="Models\Db\Aggregate\ApprovalMangement\RelatedApproval.cs" />
@@ -1016,6 +1020,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007130500109_Purchase-Add_Z_Row_Null.resx">
       <DependentUpon>202007130500109_Purchase-Add_Z_Row_Null.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007130613332_Add_Number.resx">
+      <DependentUpon>202007130613332_Add_Number.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
